--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
   ],
   "rules": {
     "import/extensions": "off",
+    "import/no-extraneous-dependencies": "off",
     "import/prefer-default-export": "off",
     "no-console": "off",
     "no-plusplus": "off"
