--- a/api/package.json
+++ b/api/package.json
@@ -1,32 +1,26 @@
 {
   "name": "api",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.1.0",
+  "description": "Roses CMS API/Backend",
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc --project tsconfig.build.json",
     "dev": "nodemon src/index.ts",
-    "migrate": "prisma migrate dev",
-    "migrate:create": "prisma migrate dev --name",
-    "migrate:reset": "prisma migrate reset",
-    "postmigrate": "cd .. && ts-node bin/migrate.ts",
+    "migrate": "cd .. && ts-node roses/bin/migrate.ts",
+    "migrate:reset": "cd .. && ts-node roses/bin/migrate.ts reset",
+    "postmigrate": "cd .. && ts-node roses/bin/postmigrate.ts",
     "seed": "prisma db seed"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@types/lodash": "^4.14.186",
-    "nodemon": "^2.0.20",
-    "prisma": "^4.4.0",
-    "prisma-repo": "^0.3.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "prisma-repo": "^0.3.0"
   },
   "dependencies": {
     "@krsbx/prisma-fqp": "^0.2.8",
-    "@prisma/client": "^4.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "dotenv-expand": "^9.0.0",
