--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
   "name": "roses-cms",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:frontend": "cd api && npm run start",
-    "start:backend": "cd app && npm run start",
-    "start": "ts-node bin/start.ts",
-    "dev:backend": "cd api && npm run dev",
-    "dev:frontend": "cd app && npm run dev",
-    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
-    "build:backend": "cd api && npm run build",
-    "build:frontend": "cd app && npm run build",
-    "build": "ts-node bin/build.ts",
-    "migrate": "cd api && npm run migrate",
+    "start": "ts-node roses/bin/start.ts",
+    "dev": "ts-node roses/bin/dev.ts",
+    "build": "ts-node roses/bin/build.ts",
+    "migrate": "cd api && npm run migrate --",
+    "migrate:reset": "cd api && npm run migrate:reset",
     "prepare": "husky install"
   },
   "repository": {
@@ -45,12 +40,17 @@
     "lint-staged": "^13.0.3",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
-    "ts-node": "^10.9.1"
+    "prisma": "^4.4.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   },
   "lint-staged": {
     "**/*.{ts,tsx}": [
       "prettier --write",
       "eslint --fix"
     ]
+  },
+  "dependencies": {
+    "@prisma/client": "^4.4.0"
   }
 }
