--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,9 @@
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "migrate": "cd ../api && npm run migrate --",
+    "migrate:reset": "cd ../api && npm run migrate:reset"
   },
   "keywords": [],
   "author": "",
