--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "build": "ts-node roses/bin/build.ts",
     "migrate": "cd api && npm run migrate --",
     "migrate:reset": "cd api && npm run migrate:reset",
-    "prepare": "husky install"
+    "prepare:husky": "husky install",
+    "prepare:backend": "cd api && npm install",
+    "prepare:frontend": "cd app && npm install",
+    "prepare": "concurrently \"npm run prepare:husky\" \"npm run prepare:backend\" \"npm run prepare:frontend\""
   },
   "repository": {
     "type": "git",
@@ -41,6 +44,7 @@
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "prisma": "^4.4.0",
+    "prisma-repo": "^0.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
