--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/index.js",
     "build": "tsc --project tsconfig.build.json",
     "dev": "nodemon src/index.ts",
-    "migrate": "prisma migrate",
+    "migrate": "cd .. && ts-node roses/bin/migrate.ts",
     "migrate:reset": "prisma migrate dev reset",
     "postmigrate": "cd .. && ts-node roses/bin/prepostmigrate.ts",
     "seed": "prisma db seed"
@@ -15,9 +15,6 @@
   "keywords": [],
   "author": "",
   "license": "MIT",
-  "devDependencies": {
-    "@types/lodash": "^4.14.186"
-  },
   "dependencies": {
     "@krsbx/prisma-fqp": "^0.2.8",
     "cors": "^2.8.5",
@@ -25,7 +22,6 @@
     "dotenv-expand": "^9.0.0",
     "express": "^4.18.1",
     "express-asyncmw": "^0.1.1",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.4"
+    "http-status": "^1.5.3"
   }
 }
