--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@types/fs-extra": "^9.0.13",
+    "@types/lodash": "^4.14.186",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
     "app-root-path": "^3.1.0",
@@ -55,6 +56,8 @@
     ]
   },
   "dependencies": {
-    "@prisma/client": "^4.4.0"
+    "@prisma/client": "^4.4.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4"
   }
 }
