--- a/roses/package.json
+++ b/roses/package.json
@@ -8,11 +8,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "lodash": "^4.17.21"
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.14.186"
-  }
+  "license": "MIT"
 }
